--- a/index.html
+++ b/index.html
@@ -242,11 +242,11 @@ footer{
     <img src="/Assets/pic2.1.JPG">
     <img src="/Assets/pic2.JPG">
     <img src="/Assets/pic3.1.JPG">
-    <img src="/Assets/pic3.JPG">
-    <img src="/Assets/pic4.JPG">
+    <img src="/pic3.JPG">
+    <img src="/pic4.JPG">
     <img src="/Assets/pic5.JPG">
-    <img src="/Assets/pic6.JPG">
-    <img src="/Assets/pic7.JPG">
+    <img src="/pic6.JPG">
+    <img src="/pic7.JPG">
   </div>
 </section>
 
@@ -296,3 +296,4 @@ new QRCode(document.getElementById("qrcode"), {
 
 </body>
 </html>
+
