--- a/groom.html
+++ b/groom.html
@@ -1,11 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<title>Groom | Prem Sagar</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<style>
+body{
+  font-family:'Georgia', serif;
+  background:#fff7f0;
+}
+
+.profile-section{
+  padding:90px 20px;
+}
+
+.profile-card{
+  background:white;
+  border-radius:30px;
+  box-shadow:0 25px 50px rgba(0,0,0,.15);
+  padding:50px 40px;
+}
+
+.profile-img{
+  width:180px;
+  height:180px;
+  border-radius:50%;
+  object-fit:cover;
+  border:6px solid #ffb6c1;
+  margin-bottom:20px;
+}
+
+.profile-name{
+  font-size:2.4rem;
+  color:#b33a6c;
+}
+
+.profile-sub{
+  font-style:italic;
+  color:#7a2a4a;
+}
+
+.info-title{
+  color:#ff4f81;
+  font-size:1.4rem;
+  margin-top:40px;
+  margin-bottom:15px;
+}
+
+.info-list p{
+  margin:6px 0;
+  font-size:1.05rem;
+}
+
+.address-box{
+  background:#fff0f5;
+  padding:20px;
+  border-radius:15px;
+  margin-top:15px;
+}
+
+.back-btn{
+  display:inline-block;
+  margin-top:40px;
+  padding:12px 30px;
+  border-radius:30px;
+  background:linear-gradient(to right,#ff758c,#ff7eb3);
+  color:white;
+  text-decoration:none;
+}
+</style>
 </head>
+
 <body>
-    Groom page
+
+<section class="profile-section">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
+
+        <div class="profile-card text-center">
+
+          <!-- Profile Image -->
+          <img src="/Assets/groompic.jpg" class="profile-img" alt="Groom Photo">
+
+          <!-- Groom Name -->
+          <h1 class="profile-name">Prem Sagar</h1>
+          <p class="profile-sub">Groom</p>
+
+          <!-- Family Details -->
+          <h3 class="info-title">Family Details</h3>
+          <div class="info-list">
+            <p><strong>Father :</strong> Mr. Nagendra Vishwakarma</p>
+            <p><strong>Mother :</strong> Mrs. Anita Devi</p>
+            <p><strong>Grandfather :</strong> Shree Chandra Dev Vishwakarma</p>
+            <p><strong>Grandmother :</strong> Smt. Manmati Devi</p>
+          </div>
+
+          <!-- Address -->
+          <h3 class="info-title">Residential Address</h3>
+          <div class="address-box">
+            <p>
+              Village – Khardiha<br>
+              Post – Adar<br>
+              District – Garhwa, Jharkhand<br>
+              PIN – 822134
+            </p>
+          </div>
+
+          <!-- Back Button -->
+          <a href="index.html" class="back-btn">← Back to Invitation</a>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
