--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- QR Code Library -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
@@ -110,27 +111,12 @@ body{
   letter-spacing:.5px;
 }
 
-/* .card-event{
-  background:white;
-  padding:25px;
-  border-radius:15px;
-  box-shadow:0 10px 20px rgba(0,0,0,.15);
-  transition:.3s;
+
+
+.evt{
+  width: 80%;
+  border-radius: 5px;
 }
-
-.card-event:hover{
-  transform:scale(1.05);
-} */
-
-/* .countdown{
-  background:#ffe6d6;
-}
-
-#timer span{
-  font-size:1.5rem;
-  margin:0 10px;
-  font-weight:bold;
-} */
 
 .countdown{
   background: linear-gradient(135deg,#ffe0ec,#fff3e0);
@@ -209,18 +195,7 @@ video{
   
 }
 
-.qr{
-  background:#fff0e6;
-}
 
-#qrcode{
-  margin:30px auto;
-  background:white;
-  padding:20px;
-  border-radius:20px;
-  width:fit-content;
-  box-shadow:0 10px 25px rgba(0,0,0,.2);
-}
 
 .wedding-footer{
   background: linear-gradient(135deg,#2c2c2c,#3b1f2f);
@@ -314,14 +289,29 @@ footer{
         <li class="nav-item">
           <a class="nav-link fw-medium" href="#video" style="color:#b33a6c;">Our Story</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link fw-medium" href="#couple" style="color:#b33a6c;">Couple</a>
-          <select>
-            <option>--select--</option>
-            <option onclick="groom.html">Groom</option>
-            <option>Bride</option>
-          </select>
-        </li>
+       
+        <li class="nav-item dropdown">
+  <a class="nav-link fw-medium dropdown-toggle"
+     href="javascript:void(0)"
+     id="coupleDropdown"
+     role="button"
+     data-bs-toggle="dropdown"
+     aria-expanded="false"
+     style="color:#b33a6c;">
+    Couple
+  </a>
+
+  <ul class="dropdown-menu" aria-labelledby="coupleDropdown">
+    <li>
+      <a class="dropdown-item" href="groom.html">Groom</a>
+    </li>
+    <li>
+      <a class="dropdown-item" href="bride.html">Bride</a>
+    </li>
+  </ul>
+</li>
+
+
         <li class="nav-item">
           <a class="nav-link fw-medium" href="#gallery" style="color:#b33a6c;">Gallery</a>
         </li>
@@ -338,7 +328,7 @@ footer{
 <!-- HERO -->
 <section class="hero" id="home">
   <h1>Prem </h1>
-  <img width="170px" src="/hanshakene.png">
+  <img width="170px" src="/Assets/handshakene.png">
   <h1> Rani</h1>
   <p>We request the pleasure of your presence</p>
 </section>
@@ -353,8 +343,7 @@ footer{
     <div class="row mt-5">
       <div class="col-md-4 mb-4">
         <div class="event-card">
-          <div class="event-icon">🌸</div>
-          <img src="/Assets/tilak1.jpeg" alt="tilak img">
+          <img class="evt" src="/Assets/tilak1.jpeg" alt="tilak img">
           <h4>Tilak Ceremony</h4>
           <span>04 February 2026</span>
         </div>
@@ -362,8 +351,7 @@ footer{
 
       <div class="col-md-4 mb-4">
         <div class="event-card">
-          <div class="event-icon">🔥</div>
-          <img src="/Assets/mandap1.jpg" alt="mandap img">
+          <img class="evt" src="/Assets/mandap1.jpg" alt="mandap img">
           <h4>Mandap Ritual</h4>
           <span>05 February 2026</span>
         </div>
@@ -371,8 +359,7 @@ footer{
 
       <div class="col-md-4 mb-4">
         <div class="event-card">
-          <div class="event-icon">🐎</div>
-          <img src="/Assets/barat1.jpg" alt="barat img">
+          <img class="evt" src="/Assets/barat1.jpg" alt="barat img">
           <h4>Grand Baraat</h4>
           <span>06 February 2026</span>
         </div>
@@ -440,7 +427,6 @@ footer{
     <h2 class="section-title">Organizer</h2>
 
     <div class="organizer-card">
-      <div class="organizer-icon">🪔</div>
       <h4>Nagendra Vishwakarma</h4>
       <p>Event Coordinator & Family Representative</p>
     </div>
