Restore index.html with original content

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ footer{
 <!-- HERO -->
 <section class="hero" id="home">
   <h1>Prem </h1>
-  <img width="170px" src="/Assets/handshakene.png">
+  <img width="170px" src="/Assets/hanshakene.png">
   <h1> Rani</h1>
   <p>We request the pleasure of your presence</p>
 </section>
@@ -485,4 +485,5 @@ new QRCode(document.getElementById("qrcode"), {
 
 </body>
 </html>
+
 
