--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@ body{
   align-items:center;
   text-align:center;
 }
+  .navbar {
+  position: sticky;
+  top: 0;
+  z-index: 1050;
+}
+
 
 .hero h1{
   font-size:3.5rem;
@@ -485,5 +491,6 @@ new QRCode(document.getElementById("qrcode"), {
 
 </body>
 </html>
+
 
 
