--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-<!-- QR Code Library -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 
 <style>
 body{
@@ -22,8 +20,8 @@ body{
 
 .hero{
   height:100vh;
-  background:linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)),
-  url('https://images.unsplash.com/photo-1523438885200-e635ba2c371e');
+  background:linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5));
+  background-image:url(/Assets/bg.JPG);
   background-size:cover;
   background-position:center;
   color:white;
@@ -33,8 +31,8 @@ body{
   align-items:center;
   text-align:center;
 }
-  .navbar {
-  position: sticky;
+.navbar {
+  /* position: sticky; */
   top: 0;
   z-index: 1050;
 }
@@ -333,14 +331,13 @@ footer{
 
 <!-- HERO -->
 <section class="hero" id="home">
-  <h1>Prem </h1>
+  <h1 style="color:cyan;"><Strong>Prem</Strong> </h1>
   <img width="170px" src="/Assets/hanshakene.png">
-  <h1> Rani</h1>
-  <p>We request the pleasure of your presence</p>
+  <h1 style="color:cyan;"> <Strong>Rani</Strong></h1>
+  <p style="color:#ff4f81;">We request the pleasure of your presence</p>
 </section>
 
-
-<!-- EVENTS -->
+ <!-- EVENTS -->
 <section class="events" id="events">
   <div class="container text-center">
     <h2 class="section-title">Wedding Celebrations</h2>
@@ -491,6 +488,3 @@ new QRCode(document.getElementById("qrcode"), {
 
 </body>
 </html>
-
-
-
