--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@ footer{
 <!-- COUNTDOWN -->
 <section class="countdown" id="countdown">
   <h2>Days Left Until the Grand Baraat</h2>
+  <h3>From Khardiha to Garhwa(Ashok Vihar)</h3>
   <p class="countdown-sub">Our forever begins in</p>
 
   <div class="timer-box">
@@ -478,13 +479,9 @@ setInterval(()=>{
   document.getElementById("seconds").innerText = Math.floor((diff/1000)%60);
 },1000);
 
-// QR CODE
-new QRCode(document.getElementById("qrcode"), {
-  text: "https://your-vercel-site.vercel.app",
-  width: 200,
-  height: 200
-});
+
 </script>
 
 </body>
 </html>
+
