Refactor wedding invitation layout and content
Updated the wedding invitation HTML structure and styles, added event details, countdown timer, video section, and RSVP form.

--- a/index.html
+++ b/index.html
@@ -479,9 +479,18 @@ setInterval(()=>{
   document.getElementById("seconds").innerText = Math.floor((diff/1000)%60);
 },1000);
 
+const navLinks = document.querySelectorAll('.navbar-nav .nav-link');
+  const navCollapse = document.getElementById('navbarNav');
 
+  navLinks.forEach(link => {
+    link.addEventListener('click', () => {
+      const bsCollapse = new bootstrap.Collapse(navCollapse, { toggle: false });
+      bsCollapse.hide();
+    });
+  });
 </script>
 
 </body>
 </html>
+
 
