--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body{
   text-align:center;
 }
 .navbar {
-  /* position: sticky; */
+position: sticky; 
   top: 0;
   z-index: 1050;
 }
@@ -494,6 +494,7 @@ const navLinks = document.querySelectorAll('.navbar-nav .nav-link');
 
 </body>
 </html>
+
 
 
 
