--- a/index.html
+++ b/index.html
@@ -484,16 +484,17 @@ setInterval(()=>{
 const navLinks = document.querySelectorAll('.navbar-nav .nav-link');
   const navCollapse = document.getElementById('navbarNav');
 
-  navLinks.forEach(link => {
+/*  navLinks.forEach(link => {
     link.addEventListener('click', () => {
       const bsCollapse = new bootstrap.Collapse(navCollapse, { toggle: false });
       bsCollapse.hide();
     });
-  });
+  }); */
 </script>
 
 </body>
 </html>
+
 
 
 
